--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,11 @@
                     <artifactId>javancss-maven-plugin</artifactId>
                     <version>2.0</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-project-info-reports-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     
