Exclude tests from CPD.

--- a/src/main/config/exclude-cpd.properties
+++ b/src/main/config/exclude-cpd.properties
@@ -1,1 +1,3 @@
-org.lafayette.server.core.config.UnixStrategyTest
+de.weltraumschaf.groundzero.CheckstyleFileTest,
+de.weltraumschaf.groundzero.CheckstyleReportTest,
+de.weltraumschaf.groundzero.CheckstyleViolationTest
