--- a/src/main/config/exclude-cpd.properties
+++ b/src/main/config/exclude-cpd.properties
@@ -1,3 +1,1 @@
-de.weltraumschaf.groundzero.model.CheckstyleFileTest,
-de.weltraumschaf.groundzero.model.CheckstyleReportTest,
-de.weltraumschaf.groundzero.model.CheckstyleViolationTest
+de.weltraumschaf.groundzero.model.CheckstyleFileTest
