--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <version>3.1</version>
         </dependency>
         <dependency>
+            <groupId>net.sourceforge.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
@@ -342,25 +347,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <configuration>
-                    <effort>Max</effort>
-                    <threshold>Default</threshold>
-                    <xmlOutput>true</xmlOutput>
-                    <findbugsXmlOutput>true</findbugsXmlOutput>
-                    <excludeFilterFile>${maven.findbugs.excludefilterfile}</excludeFilterFile>
-                    <includeFilterFile>${maven.findbugs.includefilterfile}</includeFilterFile>
-                    <!-- Optional directory to put findbugs xdoc xml report -->
-                    <xmlOutputDirectory>target/site</xmlOutputDirectory>
-                    <xmlOutput>true</xmlOutput>
-                    <threshold>Low</threshold>
-                    <effort>Max</effort>
-                    <debug>false</debug>
-                    <relaxed>false</relaxed>
-                </configuration>
-            </plugin>
 
             <!--
                 Site generation
@@ -504,6 +490,25 @@
                                 <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                                 <logViolationsToConsole>true</logViolationsToConsole>
                                 <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>findbugs-maven-plugin</artifactId>
+                            <configuration>
+                                <effort>Max</effort>
+                                <threshold>Default</threshold>
+                                <xmlOutput>true</xmlOutput>
+                                <findbugsXmlOutput>true</findbugsXmlOutput>
+                                <excludeFilterFile>${maven.findbugs.excludefilterfile}</excludeFilterFile>
+                                <includeFilterFile>${maven.findbugs.includefilterfile}</includeFilterFile>
+                                <!-- Optional directory to put findbugs xdoc xml report -->
+                                <xmlOutputDirectory>target/site</xmlOutputDirectory>
+                                <xmlOutput>true</xmlOutput>
+                                <threshold>Low</threshold>
+                                <effort>Max</effort>
+                                <debug>false</debug>
+                                <relaxed>false</relaxed>
                             </configuration>
                         </plugin>
                     </reportPlugins>
