--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,11 @@
                     <artifactId>taglist-maven-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
+                <plugin>
+                    <groupId>com.kryshchuk.maven.plugins</groupId>
+                    <artifactId>umlet-maven-plugin</artifactId>
+                    <version>1.1.5</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -375,6 +380,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
 
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.doxia</groupId>
+                        <artifactId>doxia-module-markdown</artifactId>
+                        <version>1.4</version>
+                    </dependency>
+                </dependencies>
+                
                 <configuration>
                     <reportPlugins>
                         <plugin>
