--- a/pom.xml
+++ b/pom.xml
@@ -474,6 +474,11 @@
                         <plugin>
                             <groupId>org.jacoco</groupId>
                             <artifactId>jacoco-maven-plugin</artifactId>
+                            <configuration>
+                                <excludes>
+                                    <exclude>**/**/ExitCodeImpl.class</exclude>
+                                </excludes>
+                            </configuration>
                         </plugin>
 
                         <plugin>
