--- a/pom.xml
+++ b/pom.xml
@@ -325,7 +325,7 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
-                        <exclude>**/**/ExitCodeImpl.class</exclude>
+                        <exclude>**/**/ExitCodeImpl*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -474,11 +474,6 @@
                         <plugin>
                             <groupId>org.jacoco</groupId>
                             <artifactId>jacoco-maven-plugin</artifactId>
-                            <configuration>
-                                <excludes>
-                                    <exclude>**/**/ExitCodeImpl.class</exclude>
-                                </excludes>
-                            </configuration>
                         </plugin>
 
                         <plugin>
