--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.kryshchuk.maven.plugins</groupId>
+                <artifactId>umlet-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>convert-uml</id>
+                        <goals>
+                            <goal>convert</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <!--
                 Code analysis plugins.
