--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,6 @@
         <maven.version>3.0.3</maven.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.jacoco.reportPath>${project.build.directory}/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.language>java</sonar.language>
     </properties>
 
@@ -339,10 +338,8 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <configuration>
-                    <destFile>${sonar.jacoco.reportPath}</destFile>
-                    <append>true</append>
                     <excludes>
-                        <exclude>**/**/ExitCodeImpl*</exclude>
+                        <exclude>**/ExitCodeImpl.class</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -353,7 +350,7 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>package</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
