--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>de.weltraumschaf</groupId>
     <artifactId>groundzero</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
     <packaging>jar</packaging>
 
     <name>Ground Zero</name>
@@ -44,7 +44,8 @@
         <connection>scm:git:git://github.com/Weltraumschaf/GroundZero.git</connection>
         <developerConnection>scm:git:git@github.com:Weltraumschaf/GroundZero.git</developerConnection>
         <url>https://github.com/Weltraumschaf/GroundZero.git</url>
-    </scm>
+      <tag>1.1.1</tag>
+  </scm>
 
     <distributionManagement>
         <site>
